--- CHANGELOG ---
--- PyFMI-2.9.7 ---
    * Added an argument to ResultDymolaBinary to allow for reading updated
      data from the loaded file.
    * Added option "synchronize_simulation" to allow for synchronizing 
      simulation with (scaled) real-time.
    * Resolved a bug in the example fmi20_bouncing_ball_native where a step-event is triggered in every timestep.

--- PyFMI-2.9.6 ---
    * Added setup.cfg that lists all Python package dependencies in order to run PyFMI.
    * Resolved an issue that would occur when reading large result files or streams causing the data to be corrupt due to an integer overflow.

--- PyFMI-2.9.5 ---
    * Updated structure of diagnostics data and renamed several of the variables. The top level prefix has also been changed from Diagnostics to @Diagnostics, hence the error check for name clashes has been removed.

--- PyFMI-2.9.4 ---
    * Resolved some tests in need of an update not properly designed for linux.

--- PyFMI-2.9.3 ---
    * Added an internal class variable in ResultHandlerFile to keep track of file position where the data header ends.

--- PyFMI-2.9.2 ---
    * Made error check with 'dynamic_diagnostics' less restrictive to also allow custom result handlers. In 2.9.1 only a binary result handler was allowed.

--- PyFMI-2.9.1 ---
    * Added new simulation option 'dynamic_diagnostics' to better illustrate the purpose of enabling 'logging' when 'result_handling' is set to True.
    * Updated also such that the text file 'model identifier + _debug.txt' is no longer generated when logging to the binary result file.

--- PyFMI-2.9 ---
    * Saving diagnostic data in binary result file instead of log file.
    * Attempts to get continuous states when there are no such states will now return fmi2_status_ok instead of an error.

--- PyFMI-2.8.10 ---
    * Minor updates to exception messages.

--- PyFMI-2.8.9 ---